--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/backgroundcolor"
     android:fitsSystemWindows="true"
     android:id="@+id/container">
 
@@ -15,11 +14,12 @@
         android:layout_height="match_parent" />
 
     <android.support.design.widget.BottomNavigationView
-        android:background="@color/transparent"
+        android:background="@drawable/actionbarbackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:id="@+id/navigation"
+        app:itemBackground="@drawable/actionbarbackground"
         app:menu="@menu/navigation">
 
 
