--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/creatorstitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="15dp"
+                android:layout_margin="1dp"
                 android:text="@string/criadores"
                 android:textAlignment="center"
                 android:textColor="?attr/textcolor"
@@ -65,6 +65,7 @@
 
         </LinearLayout>
         <LinearLayout
+            android:visibility="gone"
             android:animateLayoutChanges="true"
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -109,8 +110,8 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:padding="2dp"
+                android:layout_margin="20dp"
+                android:padding="10dp"
                 app:cardCornerRadius="10dp">
 
                 <TextView
@@ -120,7 +121,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:animateLayoutChanges="true"
-                    android:drawableStart="@drawable/ic_favorite_black_24dp"
+                    android:drawableBottom="@drawable/ic_favorite_black_24dp"
                     android:text="@string/suporrt_ad"
                     android:textSize="20sp" />
             </android.support.v7.widget.CardView>
