--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -32,6 +32,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:padding="20dp"
         android:id="@+id/namelayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
