--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -262,11 +262,13 @@
     <!-- my colors -->
     <color name="colorPrimary">#ab47bc</color>
     <color name="colorPrimaryDark">#6a1b9a</color>
-    <color name="colorAccent">#212121</color>
+    <color name="colorAccent">#DF947CE9</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="lwhite">#64ffffff</color>
+    <color name="owhite">#80FFFFFF</color>
     <color name="lblack">#64050000</color>
+    <color name="oblack">#80050000</color>
     <color name="transparent">#00ffffff</color>
 
 
