--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,9 +5,13 @@
     android:layout_height="match_parent"
     android:background="?attr/actionbarcolor"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragments.HomeFragment"
-    android:orientation="vertical">
+    tools:context=".Fragments.HomeFragment">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/myquotesrecycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     <android.support.design.widget.AppBarLayout
         android:background="@drawable/actionbarbackground"
         android:layout_width="match_parent"
@@ -21,61 +25,73 @@
             app:contentScrim="?attr/backgroundcolor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:expandedTitleGravity="bottom|center"
-
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:expandedTitleGravity="top|center"
+            app:layout_scrollFlags="scroll|enterAlwaysCollapsed|exitUntilCollapsed"
             app:expandedTitleTextAppearance="?attr/textcolor"
             android:fitsSystemWindows="true">
 
+
             <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_margin="25dp"
+                app:layout_collapseMode="parallax">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/profilepic"
+                    android:layout_width="180dp"
+                    android:layout_height="180dp"
+                    android:layout_gravity="center"
+                    android:foreground="?attr/selectableItemBackground"
+                    android:padding="30dp"
+                    android:src="@drawable/ic_person_black_24dp"
+                    app:civ_fill_color="@color/transparent" />
+
+                <RadioGroup
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/posts"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/post_button"
+                        android:button="@color/transparent"
+                        android:checked="true"
+                        android:padding="10dp"
+                        android:text="Posts"
+                        android:textColor="?attr/actionbarcolor"
+                        android:textStyle="bold" />
+
+                    <RadioButton
+                        android:id="@+id/likes"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/fav_button"
+                        android:button="@color/transparent"
+                        android:checked="true"
+                        android:padding="10dp"
+                        android:text="Favoritos"
+                        android:textColor="@drawable/actionbarbackground"
+                        android:textStyle="bold" />
+                </RadioGroup>
+
+
+            </LinearLayout>
+
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:orientation="vertical"
-                android:padding="10dp">
+                android:layout_marginTop="5dp"
+                android:textColor="@color/black"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:visibility="invisible" />
 
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center">
-
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:layout_marginBottom="10dp"
-                        android:padding="20dp"
-                        android:id="@+id/profilepic"
-                        app:civ_border_color="@color/colorAccent"
-                        android:layout_width="200dp"
-                        app:civ_border_width="5dp"
-                        android:layout_height="200dp"
-                        android:src="@drawable/ic_person_black_24dp" />
-
-                    <com.github.clans.fab.FloatingActionButton
-                        android:id="@+id/camerafab"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginStart="24dp"
-                        android:layout_marginBottom="10dp"
-                        android:src="@drawable/ic_photo_camera_black_24dp"
-                        android:tint="@color/colorPrimaryDark"
-                        app:fab_colorNormal="@color/white"
-                        app:fab_colorPressed="@color/grey_300"
-                        fab:fab_size="mini" />
-
-                </RelativeLayout>
-
-                <TextView
-                    android:visibility="invisible"
-                    android:layout_gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:textColor="@color/black"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
 
 
             <android.support.v7.widget.Toolbar
@@ -91,48 +107,6 @@
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
-
-
-
-
-        <LinearLayout
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <android.support.design.widget.TabLayout
-                android:id="@+id/profiletab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
-                app:tabGravity="center"
-                app:tabIndicatorHeight="1dp"
-                app:tabMode="scrollable"
-                app:tabPaddingTop="10dp"
-                app:tabTextColor="?attr/textcolor">
-
-                <android.support.design.widget.TabItem
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Posts" />
-
-                <android.support.design.widget.TabItem
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Favoritos" />
-
-            </android.support.design.widget.TabLayout>
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/myquotesrecycler"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:nestedScrollingEnabled="false" />
-        </LinearLayout>
-
 
     <RelativeLayout
         android:visibility="gone"
