--- a/app/src/main/res/layout/newquotepopup.xml
+++ b/app/src/main/res/layout/newquotepopup.xml
@@ -60,7 +60,9 @@
                                     app:tabSelectedTextColor="?attr/textcolor"
                                     app:tabTextColor="@color/lblack">
 
-
+                                    <android.support.design.widget.TabItem
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content" />
 
                                     <android.support.design.widget.TabItem
                                         android:layout_width="wrap_content"
@@ -75,12 +77,12 @@
                                     <android.support.design.widget.TabItem
                                         android:layout_height="wrap_content"
                                         android:layout_width="wrap_content"
-                                        android:icon="@drawable/ic_music_note_black_24dp" />
+                                        android:icon="@drawable/ic_filter_vintage_black_24dp" />
 
                                     <android.support.design.widget.TabItem
                                         android:layout_height="wrap_content"
                                         android:layout_width="wrap_content"
-                                        android:icon="@drawable/ic_filter_vintage_black_24dp" />
+                                        android:icon="@drawable/ic_music_note_black_24dp" />
 
 
                                 </android.support.design.widget.TabLayout>
