--- a/app/src/main/res/layout/pics.xml
+++ b/app/src/main/res/layout/pics.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="1dp"
     android:background="@color/transparent"
+    android:foreground="?attr/selectableItemBackgroundBorderless"
     app:cardCornerRadius="50dp"
     app:cardElevation="0dp"
     android:orientation="vertical">
