--- a/app/src/main/res/drawable/post_button.xml
+++ b/app/src/main/res/drawable/post_button.xml
@@ -10,7 +10,7 @@
     <item android:state_checked="true">
         <shape android:shape="rectangle">
             <corners android:radius="5dp" />
-            <solid android:color="?attr/textcolor" />
+            <gradient android:angle="90" android:endColor="?attr/overlaycolor" android:startColor="?attr/textcolor" />
 
 
             <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
