--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/home"
+        android:icon="@drawable/ic_saturn_planet_shape"
         android:title="@string/title_home" />
 
 
@@ -11,7 +11,7 @@
 
     <item
         android:id="@+id/navigation_user"
-        android:icon="@drawable/user"
+        android:icon="@drawable/ic_astronaut_head_cover_tool_for_space"
         android:title="Perfil" />
 
 
