--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -262,7 +262,7 @@
     <!-- my colors -->
     <color name="colorPrimary">#ab47bc</color>
     <color name="colorPrimaryDark">#6a1b9a</color>
-    <color name="colorAccent">#DF947CE9</color>
+    <color name="colorAccent">#B377BE</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="lwhite">#64ffffff</color>
