--- a/app/src/main/res/drawable/bottom_line.xml
+++ b/app/src/main/res/drawable/bottom_line.xml
@@ -9,7 +9,7 @@
 
     <item android:top="-2dp" android:right="-2dp" android:left="-2dp">
         <shape>
-            <solid android:color="@android:color/white" />
+            <solid android:color="?attr/actionbarcolor" />
             <stroke
                  android:width="1dp"
                 android:color="?attr/hintcolor" />
